--- a/Getting a little more fancy/css/index.css
+++ b/Getting a little more fancy/css/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-  color: black;
+  color: #312614;
   font-size: 3rem;
   text-align: center;
   margin-bottom: 0.75em;
@@ -20,10 +20,6 @@ p {
 
 img {
   width: 100%;
-}
-
-h1 span {
-  color: #b7832f;
 }
 
 .container {
@@ -54,4 +50,15 @@ h1 span {
 
 .col-l {
   width: 69%;
+}
+
+a {
+  color: #b7832f;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover,
+a:focus {
+  color: orange;
 }
