--- a/Flexbox Card Component/css/style.css
+++ b/Flexbox Card Component/css/style.css
@@ -1,5 +1,117 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
+}
+
+/* TYPOGRAPHY */
+
+body {
+  background-color: #111d4a;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #eeeeee;
+  font-size: 16px;
+}
+
+h1,
+p {
+  margin-top: 0;
+}
+
+h1 {
+  font-family: 'Blinker', sans-serif;
+  color: #05cbe9;
+  font-size: 28px;
+}
+
+.number {
+  font-family: 'Blinker', sans-serif;
+  font-size: 24px;
+}
+
+.read-time {
+  color: #aaaaaa;
+  font-size: 20px;
+}
+
+button {
+  font-size: 20px;
+}
+
+@media (min-width: 900px) {
+  body {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+}
+
+/* MOBILE LAYOUT */
+
+.picture img {
+  width: 100%;
+  height: 30vh;
+  object-fit: cover;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  padding: 2.5em;
+  height: 70vh;
+}
+
+.more {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.read-time {
+  width: 50px;
+}
+
+.read-more {
+  align-self: flex-end;
+}
+
+.read-more-button {
+  background: #05cbe9;
+  font-family: 'Blinker', sans-serif;
+  color: #111d4a;
+  border: none;
+  padding: 0.5em 1.5em;
+  transition: 250ms;
+}
+
+.read-more-button:focus,
+.read-more-button:hover {
+  background: #eeeeee;
+}
+
+/* WIDESCREEN LAYOUT */
+
+@media (min-width: 900px) {
+  .container {
+    display: flex;
+  }
+
+  .picture {
+    flex-grow: 1;
+  }
+
+  .picture img {
+    height: 100vh;
+  }
+
+  .content {
+    height: 100vh;
+    flex-grow: 1;
+  }
 }
