--- a/Flexbox Card Component/css/style.css
+++ b/Flexbox Card Component/css/style.css
@@ -54,9 +54,13 @@ button {
 
 /* MOBILE LAYOUT */
 
+.container {
+  height: 100%;
+}
+
 .picture img {
   width: 100%;
-  height: 30vh;
+  height: 30%;
   object-fit: cover;
 }
 
@@ -64,7 +68,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 2.5em;
-  height: 70vh;
+  height: 70%;
 }
 
 .more {
@@ -108,11 +112,11 @@ button {
   }
 
   .picture img {
-    height: 100vh;
+    height: 100%;
   }
 
   .content {
-    height: 100vh;
+    height: 100%;
     flex-grow: 1;
   }
 }
